--- a/style/style.css
+++ b/style/style.css
@@ -296,4 +296,14 @@ body {
     font-size: 1.5rem;
     font-weight: lighter;
   }
+  .dedicated-song {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  opacity: 0; /* Initial state for animation */
+  visibility: hidden; /* Initial state for animation */
+}
+
 }
